@@ -69,6 +69,9 @@ Minors changes:
 - Modify Tuning values.
 - Add ability to disable File Manager.
 - Make three backups of configuration when writing new one.
+- Add amdtemp module. (FR 2992462)
+- Add ability to probe on-die digital thermal sensor.
+- Enable disk quotas of kernel option.
 
 Bug fixes:
 - Fix wrong validation when WINS is enabled.
